# cvar_sensing

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
experiments/: Experiments.qmd  README.md  _quarto.yml  exp_config.py  exp_helper.py  run_experiment.py
experiments/exp-adni/: asac_evaluation.csv  baseline_evaluation.csv  data_util.py  evaluation.py  exp_asac.py  exp_baseline.py  exp_nll.py  exp_ras.py  fo_evaluation.csv  model_config.py  nll_evaluation.csv  obtain_predictor.py  ras_evaluation.csv  run_experiment.py
experiments/exp-adni/asac/: ASAC.py  Predictor_G.py  asac_baseline.py  exp_asac.sh
experiments/exp-synthetic/: asac_evaluation.csv  baseline_evaluation.csv  data_util.py  evaluation.py  exp_ablation.py  exp_asac.py  exp_baseline.py  exp_nll.py  exp_ras.py  fo_evaluation.csv  model_config.py  nll_evaluation.csv  obtain_predictor.py  q_pi.npz  ras_evaluation.csv  run_experiment.py  synthetic_data.npz  synthetic_data_gen.py
experiments/exp-synthetic/asac/: ASAC.py  Predictor_G.py  asac_baseline.py  exp_asac.sh
experiments/reports/: Experiments.md
reports/: README.md  _quarto.yml  analysis.md  analysis.qmd
reports/output/: analysis.html  analysis.md
src/cvar_sensing/: constants.py  dataset.py  encoders.py  meters.py  nn.py  policy.py  predictor.py  sensing.py  train.py  utils.py
src/cvar_sensing/utils/: __init__.py  interpolation.py  metrics.py  preprocessing.py
