[metadata]
name = cvar_sensing
version = attr: cvar_sensing.VERSION
author = Yuchao Qin
author_email = yvchao@outlook.com
description = Risk-averse active sensing for continuous-time prediction.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3-Clause
license_files = LICENSE.txt
keywords = active sensing
url = https://github.com/yvchao/cvar_sensing

classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.8
install_requires =
    importlib-metadata; python_version < "3.8"
    torch~=2.0.1; python_version > "3.8"
    torchcde~=0.2.5; python_version > "3.8"
    numpy
    scikit-learn
    scipy
    tqdm

[options.packages.find]
where = src
exclude =
    tests
    experiments
    reports

[options.extras_require]
# Note: to use the discontinued tensorflow 1.0, we use the NVidia-maintained version:
# https://github.com/NVIDIA/tensorflow
# Note that this is not supported for python 3.9 and newer (unless one builds from source).
benchmarks =
    nvidia-pyindex; python_version == '3.8'
    nvidia-tensorflow[horovod]; python_version == '3.8'
    tensorflow >=1.15, <2.0; python_version <= '3.7'
    matplotlib
    seaborn
    pandas

# Note: `dev` does not include `benchmarks` requirements.
dev =
    black[jupyter]
    build
    isort
    ruff
    jupyter
    pre-commit
    pytest
    pytest-cov
    setuptools>=46.1.0
    tox
